--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="#2d2d2d"
         app:cardCornerRadius="25dp">
 
         <LinearLayout
@@ -55,6 +54,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/edittextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
@@ -77,6 +77,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/edittextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
@@ -89,6 +90,7 @@
                 android:textSize="18sp" />
 
             <LinearLayout
+                android:id="@+id/loginBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -118,6 +120,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/forgotPasswordBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
