--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/backBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/back_new" />
@@ -35,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="#2d2d2d"
         app:cardCornerRadius="25dp">
 
         <LinearLayout
@@ -66,6 +66,7 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/textviewUid"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -98,6 +99,7 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/textviewName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -130,6 +132,7 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/textviewEmail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -162,6 +165,7 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <TextView
+                    android:id="@+id/textviewType"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -173,6 +177,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/logoutBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -184,7 +189,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:text="Sign Out"
+                    android:text="Log Out"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -201,10 +206,10 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/createStaffView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:background="#2d2d2d"
         app:cardCornerRadius="25dp">
 
         <LinearLayout
@@ -239,6 +244,7 @@
             </LinearLayout>
 
             <ListView
+                android:id="@+id/listviewStaff"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
