--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/backBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/back_new" />
@@ -156,7 +157,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="#2d2d2d"
         app:cardCornerRadius="25dp"
         android:layout_weight="1">
 
@@ -164,6 +164,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
+            android:background="#2d2d2d"
             android:orientation="vertical">
 
             <LinearLayout
@@ -191,6 +192,7 @@
             </LinearLayout>
 
             <ListView
+                android:id="@+id/listviewItem"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
