--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/backBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/back_new" />
@@ -35,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:background="#2d2d2d"
         app:cardCornerRadius="25dp">
 
         <LinearLayout
@@ -67,6 +67,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/textviewLastseen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Time"
