--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,14 +40,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="20dp"
             android:background="#2d2d2d"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginLeft="25dp"
                 android:text="Email"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -57,7 +56,7 @@
                 android:id="@+id/edittextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginTop="20dp"
                 android:background="#938A8A"
                 android:hint="Enter your email"
                 android:imeOptions="actionNext"
@@ -69,8 +68,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
                 android:text="Password"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -80,7 +78,7 @@
                 android:id="@+id/edittextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginTop="20dp"
                 android:background="#938A8A"
                 android:hint="Enter your password"
                 android:imeOptions="actionDone"
