--- a/app/src/main/res/layout/items3.xml
+++ b/app/src/main/res/layout/items3.xml
@@ -60,7 +60,7 @@
                 android:scaleType="centerCrop" />
 
             <TextView
-                android:id="@+id/textviewqty"
+                android:id="@+id/textviewItemQty"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="2dp"
