--- a/app/src/main/res/layout/orders.xml
+++ b/app/src/main/res/layout/orders.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/textview1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:text="TextView"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -34,6 +34,7 @@
                 android:layout_marginLeft="10dp"
                 android:padding="4dp"
                 android:text="TextView"
+                android:textSize="11sp"
                 android:textColor="#ffffff" />
 
         </LinearLayout>
@@ -86,6 +87,45 @@
             android:text="TextView"
             android:textSize="11sp"
             android:textColor="#ffffff" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/manageOrderView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textviewCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="Cancel"
+            android:textColor="@color/teal_200"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/textviewPostpone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="Deliver"
+            android:textColor="@color/teal_200"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/textviewDeliver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="Postpone"
+            android:textColor="@color/teal_200"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
