--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -72,6 +72,17 @@
             android:textStyle="bold"
             android:textColor="#FFFFFF"/>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loadingAnimation"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
+            android:padding="10dp"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loadinggrey" />
+
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
