--- a/app/src/main/res/layout/orders.xml
+++ b/app/src/main/res/layout/orders.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp"
@@ -9,13 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textview1"
@@ -23,9 +23,9 @@
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:text="TextView"
+                android:textColor="#ffffff"
                 android:textSize="14sp"
-                android:textStyle="bold"
-                android:textColor="#ffffff" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textview2"
@@ -34,42 +34,26 @@
                 android:layout_marginLeft="10dp"
                 android:padding="4dp"
                 android:text="TextView"
-                android:textSize="11sp"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textSize="11sp" />
 
         </LinearLayout>
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageviewDir"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="5dp"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:src="@android:drawable/ic_menu_directions"
+            android:scaleType="center" />
 
-            <ImageView
-                android:id="@+id/imageviewDir"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_menu_directions"
-                android:scaleType="center" />
-        </LinearLayout>
-
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageviewCall"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:padding="5dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageviewCall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/stat_sys_phone_call"
-                android:scaleType="centerCrop" />
-        </LinearLayout>
+            android:src="@android:drawable/stat_sys_phone_call"
+            android:scaleType="centerCrop" />
 
     </LinearLayout>
 
@@ -108,7 +92,7 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/textviewPostpone"
+            android:id="@+id/textviewDeliver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -118,7 +102,7 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/textviewDeliver"
+            android:id="@+id/textviewPostpone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
