--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -59,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:text=""
+                android:inputType="textCapWords"
                 android:textColor="#FFFFFF" />
 
         </LinearLayout>
