AddEstimateActivity and EstimateActivity working

--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -197,6 +197,7 @@
                         android:id="@+id/imageView"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
+                        android:padding="8dp"
                         android:scaleType="centerCrop"
                         android:src="@drawable/imageupload"/>
 
