Improved directory structure and customer edit feature for admins

--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".AddOrderActivity">
+    tools:context=".activity.AddOrderActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
