--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".AboutActivity">
+    tools:context=".activity.AboutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
