--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".CustomerActivity">
+    tools:context=".activity.CustomerActivity">
 
     <LinearLayout
         android:id="@+id/linear1"
