--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:scrollbars="none"
-    tools:context=".Dashboard">
+    tools:context=".activity.DashboardActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
