--- a/app/src/main/res/layout/activity_estimate.xml
+++ b/app/src/main/res/layout/activity_estimate.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".EstimateActivity">
+    tools:context=".activity.EstimateActivity">
 
     <LinearLayout
         android:id="@+id/linear1"
