--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".FeedbackActivity">
+    tools:context=".activity.FeedbackActivity">
 
     <LinearLayout
         android:id="@+id/linear1"
@@ -31,13 +31,6 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:src="@drawable/imageupload"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
