--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".OrderActivity">
+    tools:context=".activity.OrderActivity">
 
     <LinearLayout
         android:id="@+id/linear1"
