--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context=".StaffActivity">
+    tools:context=".activity.StaffActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
