--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     tools:context=".activity.AboutActivity">
 
     <LinearLayout
@@ -37,8 +37,10 @@
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="384dp"
-            android:layout_height="489dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_margin="40dp"
+            android:layout_gravity="center"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
@@ -46,9 +48,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Developed by team droidrun during Hack36"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
