--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".activity.AddCustomerActivity">
 
@@ -31,223 +31,219 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Name *"
-                            android:textColor="#FFFFFF"/>
-                        <EditText
-                            android:id="@+id/edittextName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:lines="1"
-                            android:padding="8dp"
-                            android:textColor="#FFFFFF"
-                            android:inputType="textCapWords"
-                            android:imeOptions="actionNext"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Contact *"
-                            android:textColor="#FFFFFF"/>
-
-                        <EditText
-                            android:id="@+id/edittextContact"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:imeOptions="actionNext"
-                            android:inputType="phone"
-                            android:padding="8dp"
-                            android:textColor="#FFFFFF" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Area *"
-                            android:textColor="#FFFFFF"/>
-
-                        <Spinner
-                            android:id="@+id/spinnerArea"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:entries="@array/areas_array"
-                            android:spinnerMode="dropdown"/>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Address"
-                            android:textColor="#FFFFFF"/>
-
-                        <EditText
-                            android:id="@+id/edittextAddress"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:imeOptions="actionDone"
-                            android:padding="8dp"
-                            android:textColor="#FFFFFF"
-                            android:inputType="text"
-                            android:textColorHint="#607D8B" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Pin Location *"
-                            android:textColor="#FFFFFF"/>
-
-                        <com.google.android.gms.maps.MapView
-                            android:id="@+id/mapView"
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:padding="8dp"/>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical"
-                        android:background="#000000"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="140dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:padding="8dp"
-                            android:text="Select Image"
-                            android:textColor="#FFFFFF"/>
-
-                        <ImageView
-                            android:id="@+id/imageView"
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:padding="8dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/imageupload"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </ScrollView>
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="25dp">
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:background="#2d2d2d"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
                     android:orientation="horizontal">
-                    <Button
-                        android:id="@+id/addBtn"
-                        android:layout_width="wrap_content"
+
+                    <TextView
+                        android:layout_width="140dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="5dp"
                         android:padding="8dp"
-                        android:text="Add"
-                        android:background="#000000"
-                        android:layout_weight="1"/>
-                    <Button
-                        android:id="@+id/clearBtn"
-                        android:layout_width="wrap_content"
+                        android:text="Name *"
+                        android:textColor="@color/white"/>
+                    <EditText
+                        android:id="@+id/edittextName"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:lines="1"
                         android:padding="8dp"
-                        android:text="Clear"
-                        android:background="#000000"
-                        android:layout_weight="1"/>
+                        android:textColor="@color/white"
+                        android:inputType="textCapWords"
+                        android:imeOptions="actionNext"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Contact *"
+                        android:textColor="@color/white"/>
+
+                    <EditText
+                        android:id="@+id/edittextContact"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionNext"
+                        android:inputType="phone"
+                        android:padding="8dp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Area *"
+                        android:textColor="@color/white"/>
+
+                    <Spinner
+                        android:id="@+id/spinnerArea"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="8dp"
+                        android:entries="@array/areas_array"
+                        android:spinnerMode="dropdown"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Address"
+                        android:textColor="@color/white"/>
+
+                    <EditText
+                        android:id="@+id/edittextAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionDone"
+                        android:padding="8dp"
+                        android:textColor="@color/white"
+                        android:inputType="text"
+                        android:textColorHint="#607D8B" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Pin Location *"
+                        android:textColor="@color/white"/>
+
+                    <com.google.android.gms.maps.MapView
+                        android:id="@+id/mapView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:padding="8dp"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="@color/black"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Select Image"
+                        android:textColor="@color/white"/>
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:padding="8dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/imageupload"/>
+
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </ScrollView>
 
-    </ScrollView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="25dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:background="@color/grey"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/addBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:padding="8dp"
+                    android:text="Add"
+                    android:background="@color/black"
+                    android:layout_weight="1"/>
+                <Button
+                    android:id="@+id/clearBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:padding="8dp"
+                    android:text="Clear"
+                    android:background="@color/black"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
