--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".activity.AddOrderActivity">
 
@@ -33,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_weight="1">
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:gravity="center_vertical"
-            android:background="#000000"
+            android:background="@color/black"
             android:orientation="horizontal">
 
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_marginLeft="5dp"
                 android:padding="8dp"
                 android:text="Name *"
-                android:textColor="#FFFFFF"/>
+                android:textColor="@color/white"/>
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteName"
                 android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                 android:padding="8dp"
                 android:text=""
                 android:inputType="textCapWords"
-                android:textColor="#FFFFFF" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -71,7 +71,7 @@
             android:padding="8dp"
             android:text="Add Items"
             android:textStyle="bold"
-            android:textColor="#FFFFFF"/>
+            android:textColor="@color/white"/>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loadingAnimation"
@@ -103,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
-            android:background="#2d2d2d"
+            android:background="@color/grey"
             android:orientation="vertical">
 
             <LinearLayout
@@ -120,7 +120,7 @@
                     android:text="₹"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/textviewamt"
@@ -130,7 +130,7 @@
                     android:text="0"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -138,7 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#2d2d2d"
+                android:background="@color/grey"
                 android:orientation="horizontal">
                 <Button
                     android:id="@+id/addBtn"
@@ -148,7 +148,7 @@
                     android:layout_marginRight="10dp"
                     android:padding="8dp"
                     android:text="Add"
-                    android:background="#000000"
+                    android:background="@color/black"
                     android:layout_weight="1"/>
                 <Button
                     android:id="@+id/clearBtn"
@@ -158,7 +158,7 @@
                     android:layout_marginRight="10dp"
                     android:padding="8dp"
                     android:text="Clear"
-                    android:background="#000000"
+                    android:background="@color/black"
                     android:layout_weight="1"/>
             </LinearLayout>
 
