--- a/app/src/main/res/layout/activity_cash_calculator.xml
+++ b/app/src/main/res/layout/activity_cash_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".activity.CashCalculatorActivity">
 
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:padding="10dp"
                 android:gravity="center_horizontal|center_vertical"
-                android:background="#2d2d2d"
+                android:background="@color/grey"
                 android:orientation="horizontal">
 
                 <TextView
@@ -58,7 +58,7 @@
                     android:padding="4dp"
                     android:text="Date"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:layout_weight="1"/>
                 <LinearLayout
                     android:id="@+id/shareBtn"
@@ -76,7 +76,7 @@
                         android:text="Share"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="@color/white"/>
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
@@ -100,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -115,14 +115,14 @@
                     android:padding="8dp"
                     android:text="2000"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext1"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -134,13 +134,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -155,14 +155,14 @@
                     android:padding="8dp"
                     android:text="500"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext2"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -174,13 +174,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -195,14 +195,14 @@
                     android:padding="8dp"
                     android:text="200"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext3"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -214,13 +214,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -235,14 +235,14 @@
                     android:padding="8dp"
                     android:text="100"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext4"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -254,13 +254,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -275,14 +275,14 @@
                     android:padding="8dp"
                     android:text="50"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext5"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -294,13 +294,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -315,14 +315,14 @@
                     android:padding="8dp"
                     android:text="20"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext6"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -334,13 +334,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -355,14 +355,14 @@
                     android:padding="8dp"
                     android:text="10"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext7"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -374,13 +374,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -395,14 +395,14 @@
                     android:padding="8dp"
                     android:text="5"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext8"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionNext"/>
@@ -414,13 +414,13 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
                 <ImageView
@@ -435,14 +435,14 @@
                     android:padding="8dp"
                     android:text="Others"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
                 <EditText
                     android:id="@+id/edittext9"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="12sp"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textColorHint="#607D8B"
                     android:inputType="numberDecimal"
                     android:imeOptions="actionDone"/>
@@ -454,7 +454,7 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:textColor="#FFFFFF"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -468,7 +468,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                android:background="#2d2d2d"
+                android:background="@color/grey"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -484,15 +484,15 @@
                         android:text="No. of Notes"
                         android:textSize="12sp"
                         android:textStyle="bold"
-                        android:textColor="#FFFFFF"/>
+                        android:textColor="@color/white"/>
                     <TextView
                         android:id="@+id/textviewTotalNotes"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="0"
                         android:textSize="12sp"
-                        android:textColor="#FFFFFF"
+                        android:textColor="@color/white"
                         android:layout_weight="1"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -514,14 +514,14 @@
                             android:text="0"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            android:textColor="#FFFFFF"/>
+                            android:textColor="@color/white"/>
                     </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10px"
+                    android:layout_marginTop="10dp"
                     android:padding="5dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
@@ -533,7 +533,7 @@
                         android:layout_marginRight="10dp"
                         android:padding="8dp"
                         android:text="Calculate"
-                        android:background="#000000"
+                        android:background="@color/black"
                         android:layout_weight="1"/>
                     <Button
                         android:id="@+id/clearBtn"
@@ -543,7 +543,7 @@
                         android:layout_marginRight="10dp"
                         android:padding="8dp"
                         android:text="Clear"
-                        android:background="#000000"
+                        android:background="@color/black"
                         android:layout_weight="1"/>
                 </LinearLayout>
 
