--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     android:scrollbars="none"
     tools:context=".activity.DashboardActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/linear1"
@@ -27,7 +27,7 @@
                 app:srcCompat="@drawable/salesman" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
@@ -84,7 +84,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -114,7 +114,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -152,7 +152,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -182,7 +182,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -220,7 +220,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -250,7 +250,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -288,7 +288,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
@@ -318,7 +318,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#2d2d2d"
+                    app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="15dp">
 
                     <LinearLayout
