--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@color/black"
     android:gravity="center"
     tools:context=".activity.MainActivity"
     android:orientation="vertical">
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="Easy Biz"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="28sp" />
 
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Developed by droidrun"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="16sp" />
 
 </LinearLayout>
