--- a/app/src/main/res/layout/custom_items1.xml
+++ b/app/src/main/res/layout/custom_items1.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textStyle="bold"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:text="Item name" />
 
     <LinearLayout
@@ -23,15 +23,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:text="Rs" />
 
         <TextView
             android:id="@+id/textViewItemPrice"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:text="1000"
             android:layout_weight="1"/>
 
@@ -40,14 +40,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:text="1000"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:text="Kg" />
 
     </LinearLayout>
