--- a/app/src/main/res/layout/custom_orders.xml
+++ b/app/src/main/res/layout/custom_orders.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:text="TextView"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -34,7 +34,7 @@
                 android:layout_marginLeft="10dp"
                 android:padding="4dp"
                 android:text="TextView"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 android:textSize="11sp" />
 
         </LinearLayout>
@@ -70,7 +70,7 @@
             android:padding="2dp"
             android:text="TextView"
             android:textSize="11sp"
-            android:textColor="#ffffff" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
