--- a/app/src/main/res/layout/custom_staffs.xml
+++ b/app/src/main/res/layout/custom_staffs.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1">
@@ -19,7 +19,7 @@
             android:text="TextView"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="#ffffff" />
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textview2"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="10dp"
             android:padding="2dp"
             android:text="TextView"
-            android:textColor="#ffffff" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
