--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add new item"
-        android:textColor="#ffffff"
-        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
@@ -19,38 +19,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter item name"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter selling price"
         android:inputType="numberDecimal"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionDone"
         android:hint="Enter weight"
         android:inputType="numberDecimal"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
