--- a/app/src/main/res/layout/dialog_add_staff.xml
+++ b/app/src/main/res/layout/dialog_add_staff.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add new staff"
-        android:textColor="#ffffff"
-        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
@@ -19,52 +19,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter name"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter email"
         android:inputType="textEmailAddress"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter password"
         android:inputType="textPassword"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionDone"
         android:hint="Enter phone number"
         android:inputType="phone"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <Spinner
         android:id="@+id/dialogSpinnerRole"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:entries="@array/roles_array"
         android:spinnerMode="dropdown"/>
 
