--- a/app/src/main/res/layout/dialog_edit_customer.xml
+++ b/app/src/main/res/layout/dialog_edit_customer.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Customer Details"
-        android:textColor="#ffffff"
-        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold" />
     
     <ImageView
@@ -27,26 +27,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter name"
         android:inputType="textPersonName"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/editTextDialogUserInput2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionDone"
         android:hint="Enter phone number"
         android:inputType="phone"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
     <Spinner
         android:id="@+id/dialogSpinnerArea"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:entries="@array/areas_array"
         android:spinnerMode="dropdown"/>
 
@@ -63,12 +63,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="#2d2d2d"
+        android:background="@color/grey"
         android:imeOptions="actionNext"
         android:hint="Enter address"
         android:inputType="textEmailAddress"
         android:padding="8dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
