--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="font">@font/roboto_regular</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:fontFamily">@color/black</item>
+        <item name="fontFamily">@font/roboto_regular</item>
 
     </style>
 </resources>
