--- a/app/src/main/res/layout/custom_items1.xml
+++ b/app/src/main/res/layout/custom_items1.xml
@@ -1,54 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp" >
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:padding="10dp">
 
-    <TextView
-        android:id="@+id/textViewItemName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:text="Item name" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/imageupload"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewItemName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="4dp"
+            android:textStyle="bold"
             android:textColor="@color/white"
-            android:text="Rs" />
+            android:text="Item name" />
 
-        <TextView
-            android:id="@+id/textViewItemPrice"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="@color/white"
-            android:text="1000"
-            android:layout_weight="1"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textViewItemWeight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="@color/white"
-            android:text="1000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/white"
+                android:text="Rs" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="@color/white"
-            android:text="Kg" />
+            <TextView
+                android:id="@+id/textViewItemPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/white"
+                android:text="1000"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/textViewItemWeight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/white"
+                android:text="1000"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/white"
+                android:text="Kg" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
