implemented scoped storage and fixed customer activity

--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -42,7 +42,8 @@
             android:id="@+id/editTextSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="6dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:hint="Search"
             android:drawablePadding="4dp"
             android:drawableRight="@drawable/round_search_white_24dp"/>
