--- a/app/src/main/res/layout/custom_customers.xml
+++ b/app/src/main/res/layout/custom_customers.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
 
@@ -42,38 +42,24 @@
             android:textColor="@color/white" />
     </LinearLayout>
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageviewDir"
+        android:focusable="false"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:padding="5dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:src="@android:drawable/ic_menu_directions"
+        android:scaleType="center" />
 
-        <ImageView
-            android:id="@+id/imageviewDir"
-            android:focusable="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_directions"
-            android:scaleType="center" />
-    </LinearLayout>
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageviewCall"
+        android:focusable="false"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:padding="5dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageviewCall"
-            android:focusable="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/stat_sys_phone_call"
-            android:scaleType="centerCrop" />
-    </LinearLayout>
+        android:layout_gravity="center"
+        android:src="@android:drawable/stat_sys_phone_call"
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
